<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AnimationExample</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="frame_animation">Frame Animation</string>
    <string name="fade_in">Fade In</string>
    <string name="fade_out">Fade Out</string>
    <string name="slide_up">Slide Up</string>
    <string name="slide_down">Slide Down</string>
    <string name="cross_fade">Cross Fade</string>
    <string name="sliding_pager">Sliding Pager</string>
    <string name="by_artists">Artists</string>
    <string name="by_albums">Albums</string>
    <string name="by_songs">Songs</string>

</resources>