<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnFrameAnimation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/frame_animation" />

    <Button
        android:id="@+id/btnFadeIn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/fade_in" />

    <Button
        android:id="@+id/btnFadeOut"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/fade_out" />

    <Button
        android:id="@+id/btnSlideUp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/slide_up" />

    <Button
        android:id="@+id/btnSlideDown"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/slide_down" />

    <Button
        android:id="@+id/btnCrossFade"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cross_fade" />

    <Button
        android:id="@+id/btnSlidingPager"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sliding_pager" />

</LinearLayout>